# go-fastapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  app.html  app.routers.html  genindex.html  index.html  logging.conf  modules.html  objects.inv  old_Dockerfile  poetry.toml  poetry_dockerfile  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tox.ini
.claude/commands/: deploy-commands.md  smoke-test.md
.claude/skills/deploy-commands/: SKILL.md
.claude/skills/smoke-test/: SKILL.md
.github/: deploy_doc.yaml  pr_test.yaml
.github/workflows/: aws_test.yaml  claude.yml  code_quality.yaml  docker-build.yaml  go-fastapi-QC.yaml  pr-test-qc.yaml  pr-test.yaml  pr_test.yaml  sphinx-autodoc.yaml  sphinx_autodoc.yaml
_sources/: app.routers.rst.txt  modules.rst.txt
app/: __init__.py  main.py
app/.well-known/: ai-plugin.json
app/conf/: config.yaml
app/exceptions/: global_exceptions.py
app/middleware/: __init__.py  logging_middleware.py
app/routers/: __init__.py  bioentity.py  labeler.py  models.py  ontology.py  pathway_widget.py  prefixes.py  publications.py  ribbon.py  search.py  slimmer.py  users_and_groups.py
app/utils/: __init__.py  golr_utils.py  golr_wrappers.py  mygene_utils.py  network_utils.py  ontology_utils.py  prefix_utils.py  rate_limiter.py  retry_utils.py  settings.py  sparql_utils.py
app/utils/golr/: golr_utils.py  golr_utls.py
app/utils/ontology/: ontology_manager.py  ontology_utils.py
app/utils/prefixes/: prefix_utils.py
app/utils/return_template/: results.py
app/utils/sparql/: sparql_utils.py
docs/: app.rst  conf.py  index.rst
go_fastapi/: app.py  main.py
go_fastapi/conf/: config.yaml
go_fastapi/routers/: bioentity.py  cam_endpoint.py  entitysearch.py  graph.py  labeler.py  ontology.py  ontology_endpoint.py  overrepresentation.py  prefixes.py  relation_usage.py  search.py  slimmer.py  summary.py
go_fastapi/utils/: settings.py
go_fastapi/utils/biomodel/: core.py  obograph.py
go_fastapi/utils/biowikidata/: uniprot_sparql.py  wd_sparql.py
go_fastapi/utils/biowikidata/tests/: test_uniprot.py
go_fastapi/utils/datamodel/: serializers.py
go_fastapi/utils/ontology/: ontology_manager.py
provision/: CENTRALIZATION_NOTES.md  docker-vars.yaml  s3-vars.yaml  ssl-vars.yaml  stage.yaml  start_services.yaml  vars.yaml
provision/aws/: main.tf
provision/github/: backend.tf.sample  config-instance.yaml.sample  config-stack.yaml.sample  run.sh
provision/production/: PRODUCTION_PROVISION_README.md  backend.tf.sample  config-instance.yaml.sample  config-stack.yaml.sample  go-aws-credentials.sample
provision/templates/: config.yaml  docker-compose-production.yaml  httpd-vhosts-prod-fastapi-redirect.conf  httpd-vhosts-prod-fastapi-ssl.conf  httpd-vhosts-prod-fastapi.conf  qos.conf
static/: index.html
tests/: conftest.py  test_endpoints_are_returning.py  test_go_fastapi.py  test_ontology_utils.py  test_ribbon.py  test_utils.py
tests/features/: bioentityfunction.feature
tests/fixtures/: README.md  contributor_index.json  entity_index.json  evidence_index.json  source_index.json  taxon_index.json
tests/integration/: __init__.py
tests/integration/features/: __init__.py  bioentityfunction.feature  identifiers.feature  prefixes.feature  slimmer.feature
tests/integration/step_defs/: __init__.py  bioentity_function_steps.py  prefixes_steps.py  slimmer_steps.py
tests/step_defs/: bioentity_function_steps.py
tests/unit/: __init__.py  test_bioentity_endpoints.py  test_endpoints_are_returning.py  test_global_exception_handling.py  test_golr_utils.py  test_labeler_endpoint.py  test_models_endpoints.py  test_mygene_utils.py  test_ontology_endpoints.py  test_ontology_utils.py  test_pathway_widget_endpoints.py  test_prefix_endpoints.py  test_ribbon.py  test_search_endpoint.py  test_settings.py  test_slimmer_endpoints.py  test_users_endpoints.py  test_utils.py
