[tool.poetry]
version = "0.0.0"
description = ""
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]
name = "app"

packages = [
    { include = "app" }
]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.92.0"
uvicorn = ">=0.23.2"
python-multipart = "^0.0.6"
ontobio = ">=2.8.8"
gunicorn = ">=20.1.0"
prefixmaps = "^0.1.4"
linkml-runtime = ">=1.5.5"
sparqlwrapper = ">=2.0.0"
oaklib = ">=0.5.12"
go-deploy = ">=0.4.1"
biothings-client = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
pytest-bdd = "^6.1.1"
Sphinx = "^5.0.2"
sphinx-rtd-theme = ">=1.2.2"
sphinxcontrib-napoleon = "^0.7"
tox = ">=4.6.4"
httpx = ">=0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "tests/unit",
    "tests/integration",
    "tests/ingetration/step_defs",
]

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-mermaid"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.ruff]
extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    ]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

unfixable = []
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
